[package]
name = "anony"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Anonymous struct"
repository = "https://github.com/Blindfolded18/anony.git"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
noop-waker = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
scopeguard = "1.2.0"
spmc = "0.3.0"
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }

[features]
default = []
serde = []
future = []

# Cache my doc command here 😁
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "astruct"
required-features = ["serde"]

[[example]]
name = "join"
required-features = ["future"]

[[example]]
name = "comparisons"
required-features = ["future"]

[[test]]
name = "join"
required-features = ["future"]

[[test]]
name = "join_cyclic"
required-features = ["future"]

[[bench]]
name = "join"
harness = false
required-features = ["future"]