[package]
name = "anony"
version = "0.5.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Anonymous struct"
repository = "https://github.com/Blindfolded18/anony.git"
readme = "README.md"
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
keywords = ["anonymous", "struct", "join", "future", "try_join"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.57", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
scopeguard = "1.2.0"
spmc = "0.3.0"
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
futures-concurrency = "7.5.0"

[features]
default = []
serde = []
future = []

# Cache my doc command here 😁
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "struct_tuple"
required-features = ["serde"]

[[example]]
name = "join"
required-features = ["future"]

[[example]]
name = "comparisons"
required-features = ["future"]

[[test]]
name = "join"
required-features = ["future"]

[[test]]
name = "join_cyclic"
required-features = ["future"]

[[test]]
name = "try_join"
required-features = ["future"]

[[bench]]
name = "join"
harness = false
required-features = ["future"]

[[bench]]
name = "try_join"
harness = false
required-features = ["future"]