[package]
name = "anony"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Anonymous struct"
repository = "https://github.com/discreaminant2809/anony.git"
readme = "README.md"
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
keywords = ["anonymous", "struct", "join", "future", "select"]

[lib]
path = "src/lib.rs" # So that `cargo readme` works.
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-quote-to-tokens = "0.1.1"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
scopeguard = "1.2.0"
spmc = "0.3.0"
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }
futures-concurrency = "7.6.3"

[features]
default = []
serde = []
future = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "struct_tuple"
required-features = ["serde"]

[[example]]
name = "join"
required-features = ["future"]

[[example]]
name = "comparisons"
required-features = ["future"]

[[example]]
name = "expansions"
required-features = ["future"]

[[test]]
name = "join"
required-features = ["future"]

[[test]]
name = "join_cyclic"
required-features = ["future"]

[[test]]
name = "try_join"
required-features = ["future"]

[[test]]
name = "try_join_cyclic"
required-features = ["future"]

[[bench]]
name = "join"
harness = false
required-features = ["future"]

[[bench]]
name = "try_join"
harness = false
required-features = ["future"]
